# clang-tidy-converter

./: pyproject.toml
.github/workflows/: python-app.yml
tests/: test_code_climate_formatting.py
