[tool.poetry]
name = "clang-tidy-converter"
version = "1.0.0"
description = "Python3 script to convert Clang-Tidy output to different formats."
authors = ["yuriisk <yurii.skatarenko@gmail.com>", "Guillaume Peillex <guillaume.peillex@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "clang_tidy_converter"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=3.0.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true